ags Changes & spacing fixes

--- a/src/sections/About/about.scss
+++ b/src/sections/About/about.scss
@@ -133,7 +133,7 @@
         }
 
         p {
-          font-size: 17px;
+          font-size: 16px;
           color: #191919;
         }
       }
