--- a/src/sections/KinderGarten/Inclusion.scss
+++ b/src/sections/KinderGarten/Inclusion.scss
@@ -7,9 +7,15 @@
   }
   .subTitle {
     margin-top: 0 !important;
-    font-size: 17px;
+    font-size: 16px;
     font-weight: 400;
     margin-bottom: 1rem;
+    text-align: justify;
+    .subTitle2{
+      margin-bottom: 0.5rem;
+      font-weight: 600;
+      color: #1A2C52;
+    }
   }
   .HowToSellspacing{
     margin: 3rem 0;
@@ -28,7 +34,7 @@
     }
     .subTitle {
       margin-top: 0 !important;
-      font-size: 17px;
+      font-size: 16px;
       font-weight: 400;
       margin-bottom: 1rem;
     }
