--- a/src/sections/MiddleSchool/Inclusion.scss
+++ b/src/sections/MiddleSchool/Inclusion.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables';
 
 .MiddleSchool {
- padding-top: 5rem;
+ padding-top: 7rem;
  @media #{$sm,$md} {
    padding-top: 2rem;
  }
@@ -33,9 +33,10 @@
       }
       .subTitle1 {
         margin-top: 0 !important;
-        font-size: 17px;
+        font-size: 16px;
         font-weight: 400;
         margin-bottom: 1rem;
+        text-align: justify;
       }
     }
     .HowToSellbtn{
@@ -56,7 +57,7 @@
     .subTitle {
       margin-top: 2rem;
       text-align: center;
-      font-size: 17px;
+      font-size: 16px;
       font-weight: 400;
       margin-bottom: 1rem;
     }
